# data-platform-kompleterring

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Documentation/: 1_user_stories.md  2_mvp_and_sprints.md  3_reflection_agile.md  4_eda_steps.md  5_pgadmin_guide.md  6_commit_walkthrough.md  7_viva_prep.md  Mvp_and_sprints.md  user_stories.md
app/: main.py
consumer/: db_consumer.py
data/: products_100.csv
schema/: product.py
scripts/: db_utils.py  generate_dirty_csv.py  load_products.py  publish_top5_to_kafka.py  run_all.py  transform.py
sql/: 01_create_tables.sql
tests/: test_transform.py
